@@ -38,6 +38,9 @@
 <p>2020-01-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>Magick++/lib/Options.cpp (strokeDashArray): Add needless check
+for _drawInfo-&gt;dash_pattern null in order to make static analysis
+happy.</li>
 <li>magick/render.c (DestroyPolygonInfo): Make sure to not
 dereference a null edges pointer.</li>
 <li>coders/pdb.c (WritePDBImage): Make sure that null comment value
